# esp32-controller-from-ps-vita-and-3ds-

./: README.md
3ds-controller/: 3ds-controller.3dsx  3ds-controller.elf  3ds-controller.smdh  Makefile
3ds-controller/source/: main.c
esp32/: esp32.ino
vita-controller/: CMakeLists.txt
vita-controller/src/: main.c
